<resources>
    <string name="app_name">Happy Home</string>
    <color name="blue">#d5eaf2</color>

    <string name="hh">Happy Home</string>


    <string name="kupac">Kupac</string>
    <string name="prodavac">Prodavač</string>
    <string name="kStanova">Kupnja stana</string>
    <string name="kKuce">Kupnja kuće</string>
    <string name="nStan">Najam stanova</string>
    <string name="iStana">Iznajmljivanje stana</string>
    <string name="pKuce">Prodaja kuće</string>
    <string name="registra">Registracija</string>
    <string name="prijava">Prijava</string>
    <string name="username">Username</string>
    <string name="lozinka">Lozinka</string>
    <string name="prazno"></string>
    <string name="ime">Ime</string>
    <string name="prez">Prezime</string>
    <string name="email">Email</string>
    <string name="email2">Vaš email</string>
    <string name="objav">Objava</string>
    <string name="opis">Opis</string>
    <string name="mjesec">Mjesec</string>
    <string name="godina">Godina</string>
    <string name="potvrEmail">Potvrdite email</string>
    <string name="naslov">Naslov prodaje</string>
    <string name="cijena">Cijena u kn</string>
    <string name="povrsina">Površina u m2</string>
    <string name="lokacija">Lokacija</string>
    <string name="tip">Tip kuće</string>

    <string name="pStana">Prodaja stana</string>

    <string name="note">Ako iznamljujete popunite ovo polje!</string>

    <string name="upit">Upit</string>
    <string name="vise">Više</string>

    <string name="za">Za:</string>
    <string name="od">Od:(email)</string>
    <string name="subjekt">Tema poruke</string>
    <string name="poruka">Vaša poruka</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
