<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".objavljivanje"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="430dp"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objav"
                android:textAlignment="center"
                android:textColor="#020000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/iStana" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/pStana" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/pKuce" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="427dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkButton1"
                        android:text="@string/mjesec"
                        tools:visibility="invisible" />

                    <EditText
                        android:id="@+id/editText9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:visibility="invisible" />

                    <RadioButton
                        android:id="@+id/radioButton11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkButton1"
                        android:text="@string/godina" />

                    <EditText
                        android:id="@+id/editText10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:visibility="invisible" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/potvrEmail"
                    android:textColor="#030000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naslov"
                    android:textColor="#050000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lokacija"
                    android:textColor="#050000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/povrsina"
                    android:textColor="#030000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cijena"
                    android:textColor="#090000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opis"
                    android:textColor="#050000"
                    android:textSize="18sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/editText8"
                android:layout_width="424dp"
                android:layout_height="231dp"
                android:autofillHints=""
                android:ems="40"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="objavi" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>