<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/rsz_slika"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="40dp"
        android:textColor="#050000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="40dp"
        android:inputType="textPersonName"
        android:text="@string/prazno" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lozinka"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="40dp"
        android:textColor="#050000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="40dp"
        android:inputType="textPersonName"
        android:text="@string/prazno" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"

        android:text="@string/prijava" />
</LinearLayout>